Работа исправлена на основании ревью

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
   <title>Проект место</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body class="page">
@@ -17,81 +16,71 @@
     </a>
   </header>
 
-  <section class="profile">
-    <img src="./images/avatar.jpg" alt="Аватарка" class="profile__avatar">
-    <div class="profile__info">
-      <div class="profile__info-blocks">
-        <div class="profile__info-block">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <button class="profile__button-edit"></button>
+  <main>
+    <section class="profile">
+      <div class="profile__info">
+        <img src="./images/avatar.jpg" alt="Аватарка" class="profile__avatar">
+        <div class="profile__info-blocks">
+          <div class="profile__info-block">
+            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <button class="profile__button-edit" type="button" aria-label="редактировать профиль"></button>
+          </div>
+          <p class="profile__description">Исследователь океана</p>
         </div>
-        <p class="profile__description">Исследователь океана</p>
       </div>
-    </div>
-    <button class="profile__add-button"></button>
-  </section>
+      <button class="profile__add-button" type="button"></button>
+    </section>
 
-  <section class="elements">
-    <div class="element">
-      <img src="./images/Karachaevsk.png" class="element__photo" alt="Карачаевск">
-      <div class="element__description">
-        <h2 class="element__title">Карачаевск</h2>
-        <div class="element__like-container">
-          <button class="element__like"></button>
+    <section class="elements">
+      <div class="element">
+        <img src="./images/Karachaevsk.png" class="element__photo" alt="Карачаевск">
+        <div class="element__description">
+          <h2 class="element__title">Карачаевск</h2>
+          <button class="element__like" type="button" aria-label="поставить лайк"></button>
         </div>
       </div>
-    </div>
 
-    <div class="element">
-      <img src="./images/Elbrus.png" class="element__photo" alt="Эльбрус">
-      <div class="element__description">
-        <h2 class="element__title">Гора Эльбрус</h2>
-        <div class="element__like-container">
-          <button class="element__like"></button>
+      <div class="element">
+        <img src="./images/Elbrus.png" class="element__photo" alt="Эльбрус">
+        <div class="element__description">
+          <h2 class="element__title">Гора Эльбрус</h2>
+          <button class="element__like" type="button" aria-label="поставить лайк"></button>
         </div>
       </div>
-    </div>
 
-    <div class="element">
-      <img src="./images/Dombai.png" class="element__photo" alt="Домбай">
-      <div class="element__description">
-        <h2 class="element__title">Домбай</h2>
-        <div class="element__like-container">
-          <button class="element__like"></button>
+      <div class="element">
+        <img src="./images/Dombai.png" class="element__photo" alt="Домбай">
+        <div class="element__description">
+          <h2 class="element__title">Домбай</h2>
+          <button class="element__like" type="button" aria-label="поставить лайк"></button>
         </div>
       </div>
-    </div>
 
-    <div class="element">
-      <img src="./images/Elbrus.png" class="element__photo" alt="Эльбрус">
-      <div class="element__description">
-        <h2 class="element__title">Гора Эльбрус</h2>
-        <div class="element__like-container">
-          <button class="element__like"></button>
+      <div class="element">
+        <img src="./images/Elbrus.png" class="element__photo" alt="Эльбрус">
+        <div class="element__description">
+          <h2 class="element__title">Гора Эльбрус</h2>
+          <button class="element__like" type="button" aria-label="поставить лайк"></button>
         </div>
       </div>
-    </div>
 
-    <div class="element">
-      <img src="./images/Dombai.png" class="element__photo" alt="Домбай">
-      <div class="element__description">
-        <h2 class="element__title">Домбай</h2>
-        <div class="element__like-container">
-          <button class="element__like"></button>
+      <div class="element">
+        <img src="./images/Dombai.png" class="element__photo" alt="Домбай">
+        <div class="element__description">
+          <h2 class="element__title">Домбай</h2>
+          <button class="element__like" type="button" aria-label="поставить лайк"></button>
         </div>
       </div>
-    </div>
 
-    <div class="element">
-      <img src="./images/Karachaevsk.png" class="element__photo" alt="Черкесия">
-      <div class="element__description">
-        <h2 class="element__title">Карачаево-Черкесия</h2>
-        <div class="element__like-container">
-          <button class="element__like"></button>
+      <div class="element">
+        <img src="./images/Karachaevsk.png" class="element__photo" alt="Черкесия">
+        <div class="element__description">
+          <h2 class="element__title">Карачаево-Черкесия</h2>
+          <button class="element__like" type="button" aria-label="поставить лайк"></button>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
 
   <footer class="footer">
     <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
@@ -99,15 +88,15 @@
 
   <!-- Pop-up edit name and description -->
   <div class="popup">
-    <form class="popup__form">
-      <div class="popup__container">
-        <button class="popup__close-button"></button>
-        <h2 class="popup__title">Редактировать профиль</h2>
-        <input type="text" class="popup__name" placeholder="Моё имя">
-        <input type="text" class="popup__description" placeholder="Немного о себе">
-        <button class="popup__save-button" type="submit"></button>
-      </div>
-    </form>
+    <div class="popup__container">
+      <button class="popup__close-button" type="button" aria-label="закрыть"></button>
+      <h2 class="popup__title">Редактировать профиль</h2>
+      <form class="popup__form" name="editForm"></form>
+      <input type="text" id="popupName" class="popup__input" placeholder="Моё имя">
+      <input type="text" id="popupDescription" class="popup__input" placeholder="Немного о себе">
+      <button class="popup__save-button" type="submit" aria-label="сохранить">Сохранить</button>
+      </form>
+    </div>
   </div>
 
   <script src="./scripts/index.js"></script>
