Работа исправлена на основании ревью

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
     <div class="popup__container">
       <button class="popup__close-button" type="button" aria-label="закрыть"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="popup__form" name="editForm"></form>
-      <input type="text" id="popupName" class="popup__input" placeholder="Моё имя">
-      <input type="text" id="popupDescription" class="popup__input" placeholder="Немного о себе">
-      <button class="popup__save-button" type="submit" aria-label="сохранить">Сохранить</button>
+      <form class="popup__form" name="editForm">
+        <input type="text" id="popupName" class="popup__input" placeholder="Моё имя">
+        <input type="text" id="popupDescription" class="popup__input" placeholder="Немного о себе">
+        <button class="popup__save-button" type="submit" aria-label="сохранить">Сохранить</button>
       </form>
     </div>
   </div>
