Работа подготовлена к ревью

--- a/index.html
+++ b/index.html
@@ -64,9 +64,18 @@
       </div>
     </div>
 
+    <!-- Pop-up open image -->
+    <div class="popup popup_type_image">
+      <div class="popup__image-container">
+        <button class="popup__close-button popup__close-button_image" type="button" aria-label="закрыть"></button>
+        <img class="popup__image" src=" " alt=" ">
+        <p class="popup__image-caption"></p>
+      </div>
+    </div>
+
     <template class="element-template" id="elementTemplate">
       <div class="element">
-        <img src="." class="element__photo" alt="">
+        <img src=" " class="element__photo" alt=" ">
         <button class="element__delete-button"></button>
         <div class="element__description">
           <h2 class="element__title"></h2>
