--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="popup__container">
       <button class="popup__close-button popup__close-button_element" type="button" aria-label="закрыть"></button>
       <h2 class="popup__title">Новое место</h2>
-      <form class="popup__form popup__form_e" name="editForm">
+      <form class="popup__form popup__form_elements" name="editForm">
         <input type="text" name="elementDescription" id="elementDescription" class="popup__input"
           placeholder="Название">
         <input type="text" name="elementLink" id="elementLink" class="popup__input" placeholder="Ссылка на картинку">
@@ -68,14 +68,14 @@
   <div class="popup popup_type_image">
     <div class="popup__image-container">
       <button class="popup__close-button popup__close-button_image" type="button" aria-label="закрыть"></button>
-      <img class="popup__image" src=" " alt=" ">
+      <img class="popup__image" src="#" alt="#">
       <p class="popup__image-caption"></p>
     </div>
   </div>
 
   <template class="element-template" id="elementTemplate">
     <div class="element">
-      <img src=" " class="element__photo" alt=" ">
+      <img src="#" class="element__photo" alt="#">
       <button class="element__delete-button"></button>
       <div class="element__description">
         <h2 class="element__title"></h2>
