Было внесены корректировки на основании ревью

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
   </div>
 
   <!-- Pop-up add new places -->
-  <div class="popup popup_type_add-elements">
+  <div class="popup popup_type_add-element">
     <div class="popup__container">
       <button class="popup__close-button popup__close-button_element" type="button" aria-label="закрыть"></button>
       <h2 class="popup__title">Новое место</h2>
-      <form class="popup__form popup__form_elements" name="editForm">
+      <form class="popup__form popup__form_element" name="editForm">
         <input type="text" name="elementDescription" id="elementDescription" class="popup__input"
           placeholder="Название">
         <input type="text" name="elementLink" id="elementLink" class="popup__input" placeholder="Ссылка на картинку">
