--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="popup__container">
       <button class="popup__close-button" type="button" aria-label="закрыть"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="popup__form" name="editForm" novalidate>
+      <form class="popup__form popup__form_description" name="editForm" novalidate>
         <input type="text" name="profileName" id="popupName" class="popup__input" placeholder="Моё имя" minlength="2"
           maxlength="40" required>
         <span class="popup__input-error popupName-error"></span>
@@ -92,9 +92,8 @@
     </div>
   </template>
 
-  <script src="./scripts/cards.js"></script>
-  <script src="./scripts/index.js"></script>
-  <script src="./scripts/validate.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
+
 </body>
 
 </html>
