--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Проект место</title>
 </head>
 
@@ -19,7 +18,7 @@
   <main>
     <section class="profile">
       <div class="profile__info">
-        <img src="./images/avatar.jpg" alt="Аватарка" class="profile__avatar">
+        <img src="<%=require('./images/avatar.jpg')%>" alt="Аватарка" class="profile__avatar">
         <div class="profile__info-blocks">
           <div class="profile__info-block">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -60,11 +59,10 @@
       <button class="popup__close-button popup__close-button_element" type="button" aria-label="закрыть"></button>
       <h2 class="popup__title">Новое место</h2>
       <form class="popup__form popup__form_element" name="editForm" novalidate>
-        <input type="text" name="elementDescription" id="elementDescription" class="popup__input" placeholder="Название"
-          minlength="2" maxlength="40" required>
+        <input type="text" name="name" id="elementDescription" class="popup__input" placeholder="Название" minlength="2"
+          maxlength="40" required>
         <span class="popup__input-error elementDescription-error"></span>
-        <input type="url" name="elementLink" id="elementLink" class="popup__input" placeholder="Ссылка на картинку"
-          required>
+        <input type="url" name="link" id="elementLink" class="popup__input" placeholder="Ссылка на картинку" required>
         <span class="popup__input-error elementLink-error"></span>
         <button class="popup__save-button popup__save-button-element" type="submit"
           aria-label="сохранить">Создать</button>
@@ -91,8 +89,6 @@
       </div>
     </div>
   </template>
-
-  <script type="module" src="./scripts/index.js"></script>
 
 </body>
 
