--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <main>
     <section class="profile">
       <div class="profile__info">
-        <img src="" alt="Аватар" class="profile__avatar">
+        <img src="#" alt="Аватар" class="profile__avatar">
         <div class="profile__overlay-button"></div>
         <div class="profile__info-blocks">
           <div class="profile__info-block">
@@ -60,7 +60,7 @@
       <button class="popup__close-button" type="button" aria-label="закрыть"></button>
       <h2 class="popup__title">Обновить аватар</h2>
       <form class="popup__form popup__form_avatar" name="editForm" novalidate>
-        <input type="url" name="link" id="elementLink" class="popup__input" placeholder="Ссылка на картинку" required>
+        <input type="url" name="link" id="avatarLink" class="popup__input" placeholder="Ссылка на картинку" required>
         <span class="popup__input-error elementLink-error"></span>
         <button class="popup__save-button popup__save-button-description" type="submit"
           aria-label="сохранить">Сохранить</button>
