--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
       <h2 class="popup__title">Обновить аватар</h2>
       <form class="popup__form popup__form_avatar" name="editForm" novalidate>
         <input type="url" name="link" id="avatarLink" class="popup__input" placeholder="Ссылка на картинку" required>
-        <span class="popup__input-error elementLink-error"></span>
+        <span class="popup__input-error avatarLink-error"></span>
         <button class="popup__save-button popup__save-button-description" type="submit"
           aria-label="сохранить">Сохранить</button>
       </form>
