Внесены корректировки на основании ревью

--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
         <h2 class="element__title"></h2>
         <div class="element__like-container">
           <button class="element__like" type="button" aria-label="поставить лайк"></button>
-          <p class="element__like-value"></p>
+          <p class="element__like-value">0</p>
         </div>
       </div>
     </div>
